fix offenses